# translator

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
app/: config.py  main.py
app/backends/: __init__.py  base.py  httpx_backend.py  litellm_backend.py
app/middleware/: auth.py
app/services/: openai_client.py
app/translators/: request.py  response.py  streaming.py  tool_prompt.py
src/claude_to_openai_forwarder/: __init__.py  app.py  config.py
src/claude_to_openai_forwarder/backends/: __init__.py  base.py  httpx_backend.py  litellm_backend.py
src/claude_to_openai_forwarder/middleware/: auth.py  request_logger.py
src/claude_to_openai_forwarder/models/: claude.py  openai.py
src/claude_to_openai_forwarder/services/: openai_client.py
src/claude_to_openai_forwarder/translators/: content_process.py  request.py  response.py  streaming copy.py  streaming.py  tool_prompt.py
src/claude_to_openai_forwarder/utils/: exceptions.py  json_process.py  rate_limit.py
tests/: test_backends.py  test_fuzzy_json.py  test_improvements.py  test_json_repair_fuzzy.py  test_streaming.py
