[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-to-openai-forwarder"
version = "0.1.0"
description = "A FastAPI service that translates Claude Messages API requests to OpenAI-compatible chat completions endpoints"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
claude-to-openai-forwarder = "claude_to_openai_forwarder:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_to_openai_forwarder = ["py.typed"]
