

[project]
name = "claude-to-openai-forwarder"
version = "0.1.0"
description = "A FastAPI service that translates Claude Messages API requests to OpenAI-compatible chat completions endpoints"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "httpx==0.25.2",
    "python-dotenv==1.0.0",
    "litellm==1.57.0"
]

[project.scripts]
claude-to-openai-forwarder = "claude_to_openai_forwarder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel.force-include]
".env.example" = "claude_to_openai_forwarder/.env.example"
"README.md" = "claude_to_openai_forwarder/README.md"

#[tool.hatch.build.targets.sdist]
#include = [".env.example"]

