

[project]
name = "claude-to-openai-forwarder"
version = "0.1.2"
description = "A FastAPI service that translates Claude Messages API requests to OpenAI-compatible chat completions endpoints"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",           # Updated for better 3.13/3.14 support
    "uvicorn[standard]>=0.30.0",  # Updated for compatibility
    "pydantic>=2.12.0",           # CRITICAL: Minimum version for Python 3.14
    "pydantic-settings>=2.6.0",   # Updated to match newer Pydantic
    "httpx>=0.27.0",
    "python-dotenv==1.0.0",
    "litellm>=1.57.0",
    "json-repair==0.58.7",
    "rapidfuzz==3.14.5"
]

[project.scripts]
claude-to-openai-forwarder = "claude_to_openai_forwarder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel.force-include]
".env.example" = "claude_to_openai_forwarder/.env.example"
"README.md" = "claude_to_openai_forwarder/README.md"

#[tool.hatch.build.targets.sdist]
#include = [".env.example"]

